agldt_derive/tests/02-conflicting-feature-postag.rs
extern crate agldt_derive;
use agldt_derive::PostagFeature;

#[derive(PostagFeature)]
pub enum MockFeature {
    Masculine,
    Middle,
    Neuter,
}

fn main() {}
